# TensorRt-Yolov5-JetsonNano

./: .gitignore  CMakeLists.txt  README.md  basic_setting.json  calibrator.h  common.hpp  cuda_utils.h  gen_color.h  gen_grpc.sh  gen_wts.py  logging.h  main.cc  utils.h  x_thread.cc  x_thread.h  yololayer.h  yolov5.cpp  yolov5_trt.py
config/: basic_setting.h  config.cc  config.h
defs/: box.h  info.h  motion.h  motor_status.h  response.h  response_struct.h  send_struct.h
detect_service/: detect.grpc.pb.cc  detect.grpc.pb.h  detect.pb.cc  detect.pb.h  detect_service_impl.cc  detect_service_impl.h  detect_service_server.cc  detect_service_server.h
go_test/: GetCreds.go  gen_grpc.sh  go.mod  go.sum
go_test/client/: main.go
go_test/client/defs/: defs.go
go_test/detect_service/: detect.pb.go  detect_grpc.pb.go
go_test/proto/: detect.proto
http/: server.cc  server.h
model/: calibrator.cc  calibrator.cpp  calibrator.h  common.hpp  cuda_utils.h  gen_color.h  logging.h  macros.h  utils.h  yolo_exception.h  yolo_v_5.cc  yolo_v_5.h  yololayer.cu  yololayer.h
proto/: detect.proto
util/: get_cred.cc  get_cred.h  x_thread.h
utils/: get_cred.h  x_thread.cc  x_thread.h
